<resources>
    <string name="app_name">A2 Audientes</string>
    <string name="title_home">Home</string>
    <string name="title_settings">Settings</string>
    <string name="title_audiograms">Audiograms</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="volume">Volume</string>
    <string name="programs">Programs</string>
    <string name="hearing_test">Hearing test</string>
    <string name="volume_overall">Volume (overall)</string>
    <string name="volume_left">Volume (left ear)</string>
    <string name="volume_right">Volume (right ear)</string>
    <string name="letter_l">L</string>
    <string name="letter_r">R</string>
    <string name="go">Go</string>
    <string name="new_hearing_test">Take new hearing test</string>
    <plurals name="last_hearing_test">
        <item quantity="zero">You have not taken a hearing test yet %1$s</item>
        <item quantity="other">Your last hearing test was taken on the %1$s</item>
    </plurals>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ble_not_supported">Bluetooth Low Energy is not supported</string>
    <string name="refresh">refresh</string>
    <string name="search">search</string>
    <string name="l">L</string>
    <string name="r">R</string>
    <string name="welcome">Welcome</string>
    <string name="to_the_audientes_companion_app_please_do_whatever_to_turn_on_your_device">To the audientes companion app. Please do whatever to turn on your device.</string>
    <string name="device_adress">device Address</string>
    <string name="take_new_hearing_test">Take new hearing test</string>
    <string name="hearing_test_completed">Hearing test completed</string>
    <string name="see_my_results">See my results</string>
    <string name="amazing_home_button">amazing Home Button</string>
    <string name="hearing_test_text_text_text_text">Hearing test text text text text</string>
    <string name="amazingroundconfirm_button">amazingRoundConfirm button</string>
    <string name="world">world</string>
    <string name="change_language">Change language</string>
    <string name="change_the_app_s_display_language">Change the app’s display language</string>
    <string name="trash">trash</string>
    <string name="delete_app_data">Delete app data</string>
    <string name="delete_all_data_from_the_app">Delete all data from the app</string>
    <string name="blahblah">blahblah</string>
    <string name="blahblah2">blahblah2</string>
    <string name="blahblah3">blahblah3</string>
    <string name="start">Start</string>
    <string name="sign_in_to_audientes_companion">Sign in to Audientes Companion</string>
    <string name="sign_in">Sign In</string>
    <string name="textview2">textview2</string>
    <string name="textview1">textview1</string>
    <string name="programName">program name</string>
    <string name="basedOnAudiogram">based on audiogram</string>
    <string name="SignIn">Sign In</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="SignUpText">Don\'t have an audientes account? Sign up</string>
    <string name="SignUp">Sign Up</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="about_us">About Us</string>
    <string name="learn_about_audientes_companion">Learn about Audientes Companion</string>
    <string name="audientes_formaal">Audientes går ind for blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah  </string>
    <string name="appensskabere">Denne app er lavet af gruppe A2. Gruppen består af 6 medlemmer. Sersan Aslan, Theodor Guttesen, Joakim Levorsen, Tim Jensen, Ida Christensen og Cecilie Drejer</string>
    <string name="about_audientes">At Audientes, our mission is to help the millions of people around the world who suffer from mild to severe hearing loss.</string>
    <string name="app_creators">This app was created by Group A2:\n\nSersan Aslan\nTheodor Guttesen\nJoakim Levorsen\nTim Jensen\nIda Christensen\nCecilie Drejer</string>
    <string name="sign_out_text">Sign Out</string>
    <string name="sign_out_undertext">Sign out of audientes companion</string>
    <string name="play_test_audio">Play or stop test audio</string>
    <string name="play">Play</string>
    <string name="stop">Stop</string>
    <string name="deleting_audiograms">Deleting audiogram and accompanying programs…</string>
    <string name="languagelabel">Language</string>
    <string name="uk_english">UK English</string>
    <string name="use_uk_english_for_the_audientes_app">Use UK English for the Audientes App</string>
    <string name="uk_flag_image">UKFlagImage</string>
    <string name="hearing_test_info">You will be asked to wear the hearable and sit in a quiet area free for disturbing sounds and other factors.\n\nEvery time you hear a tone you should press the test-button on the screen.\n\nBefore starting the hearing test, we check the surrounding noise level, if it is greater than expected value, we would suggest that the user find another quiet place.</string>
    <string name="welcome_to_the_app">Welcome to the Audientes Companion App.</string>
    <string name="please_turn_your_device_on">Please turn your device on.</string>
    <string name="about_audientes_hearable">Your Audientes hearable will work optimally when you perform a hearing test using the built-in Pure Tone Audiometry, just like when visiting a hearing specialist.\n\nA series of sounds will be broadcast through the earphones. It will measure your ability to hear sounds at various pitches and volumes.</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="hearing_test_how_to">Your Audientes hearable will work optimally when you perform a hearing test using the built-in Pure Tone Audiometry, just like when visiting a hearing specialist.\n\nA series of sounds will be broadcast through the earphones. It will measure your ability to hear sounds at various pitches and volumes.</string>
</resources>
