<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray1">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="694dp"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/language"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_weight="0"
                android:contentDescription="@string/world"
                app:srcCompat="@drawable/ic_globe" />

            <Space
                android:layout_width="@dimen/activity_horizontal_margin"
                android:layout_height="wrap_content"
                android:layout_weight="0" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/languageText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/change_language"
                    android:textColor="@color/gray6" />

                <TextView
                    android:id="@+id/programsTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/change_the_app_s_display_language"
                    android:textColor="@color/gray4" />
            </LinearLayout>
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/activity_horizontal_margin" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_weight="0"
                android:contentDescription="@string/trash"
                app:srcCompat="@drawable/ic_trash" />

            <Space
                android:layout_width="@dimen/activity_horizontal_margin"
                android:layout_height="wrap_content"
                android:layout_weight="0" />

            <LinearLayout
                android:id="@+id/delete"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/delete_app_data"
                    android:textColor="@color/gray6" />

                <TextView
                    android:id="@+id/hearingtesttext2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/delete_all_data_from_the_app"
                    android:textColor="@color/gray4" />
            </LinearLayout>
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/activity_horizontal_margin" />

        <LinearLayout
            android:id="@+id/SignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/signInImage"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_weight="0"
                android:contentDescription="@string/world"
                app:srcCompat="@drawable/ic_account_circle_24px_outlined" />

            <Space
                android:layout_width="@dimen/activity_horizontal_margin"
                android:layout_height="wrap_content"
                android:layout_weight="0" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/signInText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_in"
                    android:textColor="@color/gray6" />

                <TextView
                    android:id="@+id/SignInundertext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_in_to_audientes_companion"
                    android:textColor="@color/gray4" />
            </LinearLayout>
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/activity_horizontal_margin" />

        <LinearLayout
            android:id="@+id/aboutUs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_weight="0"
                app:srcCompat="@drawable/ic_icons_info" />

            <Space
                android:layout_width="@dimen/activity_horizontal_margin"
                android:layout_height="wrap_content"
                android:layout_weight="0" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/aboutUsText1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/about_us"
                    android:textColor="@color/gray6" />

                <TextView
                    android:id="@+id/aboutUsText2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/learn_about_audientes_companion"
                    android:textColor="@color/gray4" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>