<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray1">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/aboutUsTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50sp"
                android:text="@string/about_us"
                android:textAlignment="center"
                android:textColor="@color/primary"
                android:textSize="50sp" />

            <TextView
                android:id="@+id/omAudientes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20sp"
                android:layout_marginTop="30sp"
                android:layout_marginRight="20sp"
                android:text="@string/about_audientes"
                android:textAlignment="center"
                android:textColor="@color/gray6"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/whoCreatedTheApp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50sp"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:layout_marginRight="50sp"
                android:text="@string/app_creators"
                android:textAlignment="center"
                android:textColor="@color/gray6"
                android:textSize="18sp" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>