<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="20dp"
        android:background="@color/gray1"
        android:orientation="vertical">
        <TextView
            android:id="@+id/titleSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/SignUp"
            android:textAlignment="center"
            android:textColor="@color/primary"
            android:textSize="50sp" />
        <Space
            android:layout_width="match_parent"
            android:layout_height="125dp" />
        <TextView
            android:id="@+id/emailSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textColor="@color/primary"
            android:textSize="20sp" />
        <EditText
            android:backgroundTint="@color/primary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/passwordSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password"

            android:textColor="@color/primary"
            android:textSize="20sp" />
        <EditText
            android:backgroundTint="@color/primary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <Space
            android:layout_width="match_parent"
            android:layout_height="50dp" />
        <Button
            android:id="@+id/buttonSignUpDone"
            android:layout_width="match_parent"
            android:layout_height="71dp"
            android:background="@color/primary"
            android:text="@string/SignUp"
            android:textColor="@color/gray1"
            android:textSize="20sp"
            />
        <Space
            android:layout_width="match_parent"
            android:layout_height="50dp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>