<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.welcome.WelcomeActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gray1"
        android:orientation="vertical">

        <Space
            android:layout_width="match_parent"
            android:layout_height="100dp" />

        <TextView
            android:id="@+id/titleView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:textAlignment="center"
            android:textColor="@color/primary"
            android:textSize="50sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="50dp" />

        <TextView
            android:id="@+id/welcomeText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_outer_horizontal_margin"
            android:layout_marginRight="@dimen/activity_outer_horizontal_margin"
            android:text="@string/welcome_to_the_app"
            android:textAlignment="center"
            android:textColor="@color/gray6"
            android:textSize="24sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/activity_vertical_margin" />

        <TextView
            android:id="@+id/turnOnDeviceText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/please_turn_your_device_on"
            android:textAlignment="center"
            android:textColor="@color/gray6"
            android:textSize="24sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Button
                android:id="@+id/button11"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/ic_forward" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="50dp" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>